--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@liveblocks/node": "^2.18.3",
     "@liveblocks/react": "^2.18.3",
     "@liveblocks/yjs": "^2.18.3",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.3.1",
